--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/Home">Azure App Service REST API Sample</a>
+                <a class="navbar-brand" href="#/Home">Welcome to Hatim's Azure Training Session on Azure Web App with .Net core</a>
             </div>
         </div>
     </div>
